[tool.poetry]
name = "ai-code-reader"
version = "0.1.0"
description = ""
authors = ["wanglei <wanglei@datagrand.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.3.3"
gradio = "4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
